<?xml version="1.0" encoding="UTF-8"?>

<!--
Copyright 2016 Koverse, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.koverse</groupId>
  <artifactId>koverse-spark-examples</artifactId>
  <version>0.1.0</version>
  <name>${project.artifactId}</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <koverse.version>2.8.0</koverse.version>
  </properties>

  <!-- Project Metadata specific to your organization -->
  <url>http://www.koverse.com/</url>
  <inceptionYear>2010</inceptionYear>
  <organization>
    <name>Koverse</name>
    <url>http://www.koverse.com/</url>
  </organization>
  <licenses>
    <license>
      <name>The Koverse License</name>
      <url>http://www.koverse.com/</url>
      <distribution>repo</distribution>
      <comments>TODO: Needs to be filled in properly</comments>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>jaredwinick</id>
      <name>Jared Winick</name>
      <email>jaredwinick@koverse.com</email>
    </developer>
    <developer>
      <id>cpfreem</id>
      <name>Chad Freeman</name>
      <email>chadfreeman@koverse.com</email>
    </developer>
    <developer>
      <id>maryrogers</id>
      <name>Mary Rogers</name>
      <email>maryrogers@koverse.com</email>
    </developer>
  </developers>
  <issueManagement>
    <system>JIRA</system>
    <url>https://koverse.atlassian.net/browse/</url>
  </issueManagement>
  <ciManagement>
    <system>bamboo</system>
    <url>https://koverse.atlassian.net/builds/</url>
  </ciManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>net.alchim31.maven</groupId>
          <artifactId>scala-maven-plugin</artifactId>
          <version>3.2.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.5.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>2.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.rat</groupId>
          <artifactId>apache-rat-plugin</artifactId>
          <version>0.11</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>2.17</version>
        </plugin>
        <plugin>
          <groupId>org.scalastyle</groupId>
          <artifactId>scalastyle-maven-plugin</artifactId>
          <version>0.8.0</version>
        </plugin>
        <plugin>
          <groupId>com.lewisd</groupId>
          <artifactId>lint-maven-plugin</artifactId>
          <version>0.0.9</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>net.alchim31.maven</groupId>
        <artifactId>scala-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>scala-compile-first</id>
            <phase>process-resources</phase>
            <goals>
              <goal>add-source</goal>
              <goal>compile</goal>
            </goals>
          </execution>
          <execution>
            <id>scala-test-compile</id>
            <phase>process-test-resources</phase>
            <goals>
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
            
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
       	<configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
        <executions>
          <execution>
            <id>compile</id>
            <phase>compile</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.5.3</version>
        <configuration>
          <descriptors>
            <descriptor>assembly.xml</descriptor>
          </descriptors>
          <finalName>PySparkExampleAddon</finalName>
        </configuration>

        <executions>
          <execution>
            <id>bundle</id>
            <phase>package</phase>
            <goals>
              <goal>assembly</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- This maven-shade-plugin builds the artifact, which is an "uber jar"
      containing the classes from this project, and the contents of all non-provided
      dependencies. The output of this is the Addon JAR which is uploaded to Koverse. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <executions>
          <execution>
            <id>shade</id>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <filters>
                <!-- do not include hashing info from dependencies, because it
                causes this jar to appear corrupt -->
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/*.SF</exclude>
                    <exclude>META-INF/*.DSA</exclude>
                    <exclude>META-INF/*.RSA</exclude>
                  </excludes>
                </filter>
              </filters>
              <!-- Additional configuration. -->
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Plugin for deploying addons to koverse.
          1) Add the following settings to your ~/.m2/settings.xml profile
          <settings>
              <profiles>
                  <profile>
                      <activation>
                          <activeByDefault>true</activeByDefault>
                      </activation>
                      <properties>
                          <koverse.apitoken>API TOKEN HERE</koverse.apitoken>
                          <koverse.serverurl>http://<KOVERSE-SERVER-HERE>/Koverse</koverse.serverurl>
                      </properties>
                  </profile>
              </profiles>
          </settings>
          2) Use this command to deploy this addon
          mvn clean package koverse:deploy
          OR
          Uncomment the block below to have maven deploy to the koverse
          server every time you use the following command.
          mvn clean deploy
      -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>koverse-maven-plugin</artifactId>
        <version>2.0.9</version>
        <configuration>
          <goal>deploy</goal>
        </configuration>
      </plugin>
            
      <!-- enforce license headers -->
      <plugin>
        <groupId>org.apache.rat</groupId>
        <artifactId>apache-rat-plugin</artifactId>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.doxia</groupId>
            <artifactId>doxia-core</artifactId>
            <version>1.6</version>
            <exclusions>
              <exclusion>
                <groupId>xerces</groupId>
                <artifactId>xercesImpl</artifactId>
              </exclusion>
            </exclusions>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <id>rat</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <excludes>
            <exclude>README.md</exclude>
            <exclude>derby.log</exclude>
            <exclude>dependency-reduced-pom.xml</exclude>
            <exclude>.checkstyle</exclude>
            <exclude>src/main/resources/classesToInspect</exclude>
            <exclude>src/main/resources/datasets/departments.csv</exclude>
            <exclude>src/main/resources/datasets/employees.csv</exclude>
            <exclude>src/main/resources/datasets/tweets.jsonstream</exclude>
            <exclude>src/main/resources/datasets/weather.csv</exclude>
            <exclude>.github/pull_request_template.md</exclude>
          </excludes>
        </configuration>
      </plugin>
            
      <!-- Checkstyle to verify Java code style -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <configuration>
              <configLocation>google_checks.xml</configLocation>
              <encoding>UTF-8</encoding>
              <consoleOutput>true</consoleOutput>
              <violationSeverity>warning</violationSeverity>
              <failsOnError>true</failsOnError>
              <linkXRef>false</linkXRef>
              <violationIgnore>CustomImportOrder</violationIgnore>
            </configuration>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Check to verify Scala code style -->            
      <plugin>
        <groupId>org.scalastyle</groupId>
        <artifactId>scalastyle-maven-plugin</artifactId>
        <configuration>
          <verbose>false</verbose>
          <failOnViolation>true</failOnViolation>
          <includeTestSourceDirectory>true</includeTestSourceDirectory>
          <failOnWarning>false</failOnWarning>
          <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
          <testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
          <configLocation>${basedir}/src/main/resources/scalastyle_config.xml</configLocation>
          <outputFile>${project.basedir}/target/scalastyle-output.xml</outputFile>
          <outputEncoding>UTF-8</outputEncoding>
         </configuration>
         <executions>
          <execution>
            <id>scala-check</id>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
         </executions>
      </plugin>

      <!-- linter for this pom.xml -->
      <plugin>
        <groupId>com.lewisd</groupId>
        <artifactId>lint-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>pom-lint</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      
      <!-- for spark-testing-base -->
      <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-surefire-plugin</artifactId>
		<version>2.19.1</version>
		<configuration>
			<forkCount>1</forkCount>
			<reuseForks>true</reuseForks>
			<argLine>-Xmx2048m -XX:MaxPermSize=2048m</argLine>
			<includes>
				<include>**/*Suite.class</include>
				<include>**/*Test.class</include>
				<include>**/*Tests.class</include>
				<include>**/*Spec.class</include>
				<include>**/*Specs.class</include>
			</includes>
		</configuration>
      </plugin>
	

    </plugins>
  </build>

  <dependencies>
    <!-- koverse-sdk is provided by koverse at runtime -->
    <dependency>
      <groupId>com.koverse</groupId>
      <artifactId>koverse-sdk</artifactId>
      <version>${koverse.version}</version>
      <scope>provided</scope>
	<exclusions>
		<exclusion>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
		</exclusion>
		<exclusion>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
		</exclusion>
		<exclusion>
			<groupId>org.json4s</groupId>
			<artifactId>json4s-core_2.10</artifactId>
		</exclusion>
		<exclusion>
			<artifactId>servlet-api</artifactId>
			<groupId>javax.servlet</groupId>
		</exclusion>
	</exclusions>
    </dependency>

    <dependency>
      <groupId>org.json4s</groupId>
      <artifactId>json4s-core_2.10</artifactId>
      <version>3.3.0.RC4</version>
      <scope>provided</scope>
    </dependency>
        
    <dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-library</artifactId>
      <version>2.10.5</version>
      <scope>provided</scope>
    </dependency>
        
    <dependency>
      <groupId>com.twitter</groupId>
      <artifactId>chill_2.10</artifactId>
      <version>0.7.0</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.twitter</groupId>
      <artifactId>chill-bijection_2.10</artifactId>
      <version>0.7.0</version>
      <scope>provided</scope>
    </dependency>
        
    <dependency>
      <groupId>com.koverse</groupId>
      <artifactId>koverse-shaded-deps</artifactId>
      <version>${koverse.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-mllib_2.10</artifactId>
      <version>1.6.1</version>
      <scope>provided</scope>
    </dependency>
    
    <!-- spark-testing-base dependencies -->
   	<dependency>
	    <groupId>com.holdenkarau</groupId>
	    <artifactId>spark-testing-base_2.10</artifactId>
	    <version>1.6.1_0.3.3</version>
	    <scope>test</scope>
	</dependency>

	<dependency>
		<groupId>org.apache.spark</groupId>
		<artifactId>spark-hive_2.10</artifactId>
		<version>1.6.1</version>
		<scope>test</scope>
	</dependency>
	<!-- end spark-testing-base dependencies -->
	
  </dependencies>

  <repositories>
    <repository>
      <id>koverse</id>
      <name>Koverse Public Repo</name>
      <url>http://nexus.koverse.com/nexus/content/groups/public/</url>
      <layout>default</layout>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>koverse</id>
      <url>http://nexus.koverse.com/nexus/content/groups/public/</url>
    </pluginRepository>
  </pluginRepositories>

</project>
